--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,211 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.idea
+# java target
+target/# 忽略编译生成的文件
+*.class
+
+# 忽略 Maven 生成的目录
+target/
+
+# 忽略 Gradle 生成的目录
+build/
+
+# 忽略 IntelliJ IDEA 生成的文件和目录
+.idea/
+*.iml
+out/
+
+# 忽略 Eclipse 生成的文件和目录
+.classpath
+.project
+.settings/
+
+# 忽略日志文件
+*.log
+
+# 忽略临时文件
+*.tmp
+*.swp
+
+# 忽略操作系统的临时文件
+.DS_Store
+Thumbs.db
+
+# 忽略 JAR 文件
+*.jar
+
+# 忽略 WAR 文件
+*.war
+
+# 忽略 EAR 文件
+*.ear
+
+# 忽略 WAR 和 EAR 文件的解压目录
+*.war-exploded/
+*.ear-exploded/
+
+# 忽略 JAR 文件的源码包
+*.jar.original
+
+# 忽略 JAR 文件的签名文件
+*.jar.asc
+
+# 忽略 JAR 文件的 MD5 校验文件
+*.jar.md5
+
+# 忽略 JAR 文件的 SHA1 校验文件
+*.jar.sha1
+
+# 忽略 JAR 文件的 SHA256 校验文件
+*.jar.sha256
+
+# 忽略 JAR 文件的 SHA512 校验文件
+*.jar.sha512
+
+# 忽略 JAR 文件的 PGP 签名文件
+*.jar.pgp
+
+# 忽略 JAR 文件的 GPG 签名文件
+*.jar.gpg
+
+# 忽略 JAR 文件的 POM 文件
+*.jar.pom
+
+# 忽略 JAR 文件的 JAR 文件
+*.jar.jar
+
+# 忽略 JAR 文件的 ZIP 文件
+*.jar.zip
+
+# 忽略 JAR 文件的 TAR 文件
+*.jar.tar
+
+# 忽略 JAR 文件的 GZ 文件
+*.jar.gz
+
+# 忽略 JAR 文件的 BZ2 文件
+*.jar.bz2
+
+# 忽略 JAR 文件的 XZ 文件
+*.jar.xz
+
+# 忽略 JAR 文件的 Z 文件
+*.jar.z
+
+# 忽略 JAR 文件的 LZ 文件
+*.jar.lz
+
+# 忽略 JAR 文件的 LZMA 文件
+*.jar.lzma
+
+# 忽略 JAR 文件的 LZ4 文件
+*.jar.lz4
+
+# 忽略 JAR 文件的 ZSTD 文件
+*.jar.zstd
+
+# 忽略 JAR 文件的 ZST 文件
+*.jar.zst
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+# 忽略 JAR 文件的 ZRLE 文件
+*.jar.zrle
+
+#
